# fixkit

./: .gitignore  README.md  TODOs.md  example.ipynb  pyproject.toml  requirements.txt
.github/workflows/: test-fixkit.yml  test-pyrep.yml
eval/: PyAE_markup_1.txt  PyAE_markup_2.txt  PyAE_middle_1.txt  PyAE_middle_2.txt  data.py  eval.py  eval_benchmark.py  eval_student_assignments.py  seeds.txt  slurm.sh
eval/refactory_benchmark/question_1/001/: test_001.py  test_002.py  test_003.py  test_004.py  test_005.py  test_006.py  test_007.py  test_008.py  test_009.py  test_010.py  test_011.py
eval/refactory_benchmark/question_1/002/: test_001.py  test_002.py  test_003.py  test_004.py  test_005.py  test_006.py  test_007.py  test_008.py  test_009.py  test_010.py  test_011.py
eval/refactory_benchmark/question_1/003/: test_001.py  test_002.py  test_003.py  test_004.py  test_005.py  test_006.py  test_007.py  test_008.py  test_009.py  test_010.py  test_011.py
src/fixkit/: __init__.py  candidate.py  cli.py  constants.py  logger.py  stmt.py
src/fixkit/analysis/: dataflow.py  scope.py
src/fixkit/embeddings/: encoder.py
src/fixkit/fitness/: __init__.py  engine.py  metric.py
src/fixkit/genetic/: __init__.py  crossover.py  minimize.py  operators.py  selection.py  templates.py  transform.py  types.py
src/fixkit/localization/: __init__.py  coverage.py  localization.py  normalization.py  sflkit.py  t4p.py
src/fixkit/repair/: __init__.py  patch.py  pyae.py  pycardumen.py  pygenprog.py  pykali.py  pymutrepair.py  repair.py
src/fixkit/search/: search.py
src/pyrep/: __init__.py  candidate.py  cli.py  constants.py  engine.py  fitness.py  logger.py  minimize.py  mutation.py  normalization.py  patch.py  selection.py  stmt.py  transform.py
src/pyrep/embeddings/: encoder.py
src/pyrep/fitness/: __init__.py  engine.py  metric.py
src/pyrep/genetic/: __init__.py  crossover.py  minimize.py  operators.py  selection.py  templates.py  transform.py  types.py
src/pyrep/localization/: __init__.py  coverage.py  localization.py  location.py  normalization.py  sflkit.py  t4p.py
src/pyrep/mode/: __init__.py  pygenprog.py  repair.py
src/pyrep/mutation/: __init__.py  crossover.py  operators.py
src/pyrep/repair/: __init__.py  patch.py  pycardumen.py  pydeeprepair.py  pygenprog.py  pykali.py  pymutrepair.py  repair.py
src/pyrep/search/: ingredient.py  search.py
tests/: playground.py  test_ae.py  test_cardumen.py  test_diff.py  test_embeddings.py  test_engine.py  test_fitness.py  test_genetic.py  test_localization.py  test_nn.py  test_operators.py  test_repair.py  test_system_test.py  test_template.py  utils.py
tests/resources/granularity/: a.py  b.py
tests/resources/middle/: global_2.py  middle.py
tests/resources/middle_cardumen/: global_2.py  middle.py  tests.py
tests/resources/tiny/: tests.py  tiny.py
(+18222 files in other folders)
